--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,4 +1,19 @@
-# This file stores configurations for your Shopify app.
-# It must exist at the root of your app.
+# Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
-scopes = ""
+client_id = "05e677368ebbc524eb355f388e02cf60"
+name = "post-purchase-extension-mm"
+application_url = "https://shopify.dev/apps/default-app-home"
+embedded = true
+
+[build]
+dev_store_url = "malik-checkout-test.myshopify.com"
+include_config_on_deploy = true
+
+[auth]
+redirect_urls = [ "https://shopify.dev/apps/default-app-home/api/auth" ]
+
+[webhooks]
+api_version = "2024-01"
+
+[pos]
+embedded = false
